# rental

./: README.md  changelog.md
backend/: README.md  pyproject.toml
backend/room_rental/: manage.py
backend/room_rental/agreement/: admin.py  apps.py  urls.py
backend/room_rental/agreement/migrations/: 0001_initial.py
backend/room_rental/agreement/models/: __init__.py  agreement.py
backend/room_rental/agreement/serializers/: __init__.py  agreement_serializer.py
backend/room_rental/agreement/views/: __init__.py  agreement_view.py
backend/room_rental/auth/: urls.py
backend/room_rental/auth/views/: auth_view.py
backend/room_rental/complaint/: admin.py  models.py  serializer.py  urls.py  views.py
backend/room_rental/complaint/migrations/: 0001_initial.py
backend/room_rental/core/: admin.py
backend/room_rental/core/migrations/: 0001_initial.py
backend/room_rental/core/models/: __init__.py  base.py  user.py
backend/room_rental/core/permissions/: __init__.py  is_landlord.py  is_tenant.py
backend/room_rental/core/serializers/: __init__.py  rental_user_serializer.py
backend/room_rental/core/templates/: agreement_request.html  register.html  templates.py
backend/room_rental/core/utils/: thread.py
backend/room_rental/payment/: admin.py  khalti.py  models.py  urls.py  views.py
backend/room_rental/payment/migrations/: 0001_initial.py  (+2 more)
backend/room_rental/property/: admin.py  urls.py
backend/room_rental/recommendation/: urls.py  views.py
backend/room_rental/room_rental/: asgi.py  settings.py  urls.py  wsgi.py
frontend/: package-lock.json  (+1 more)
(+84 files in other folders)
